--- a/spec/fixtures/vcr_cassettes/recipe_end_point/recipe_call_with_no_country_param/does_not_include_other_attributes_recieved_from_API_endpoint.yml
+++ b/spec/fixtures/vcr_cassettes/recipe_end_point/recipe_call_with_no_country_param/does_not_include_other_attributes_recieved_from_API_endpoint.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.edamam.com/api/recipes/v2?app_id=3dd5fb33&app_key=<app_key>&q=Andora&random=true&type=public
+    uri: https://api.edamam.com/api/recipes/v2?app_id=3dd5fb33&app_key=<recipe_app_key>&q=Andora&random=true&type=public
     body:
       encoding: US-ASCII
       string: ''
@@ -21,7 +21,7 @@ http_interactions:
       Server:
       - openresty
       Date:
-      - Sat, 12 Nov 2022 00:38:31 GMT
+      - Sun, 13 Nov 2022 16:22:44 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -33,13 +33,13 @@ http_interactions:
       Expires:
       - Thu, 01 Jan 1970 00:00:00 GMT
       X-Served-By:
-      - ip-10-0-1-125.ec2.internal/10.0.1.125
+      - ip-10-0-1-36.ec2.internal/10.0.1.36
       Strict-Transport-Security:
       - max-age=15552001
       X-Request-Id:
-      - 5bc2f22ba4cf78bc793e4404c95d65b5
+      - b3a3f3f83e8adaa6c6f66186dc2f5ebc
     body:
       encoding: UTF-8
       string: '{"from":1,"to":0,"count":0,"_links":{},"hits":[]}'
-  recorded_at: Sat, 12 Nov 2022 00:38:31 GMT
+  recorded_at: Sun, 13 Nov 2022 16:22:44 GMT
 recorded_with: VCR 6.1.0
