--- a/spec/fixtures/vcr_cassettes/Learning_Resources_end_point/uses_passed_country_to_return_leraning_resources/uses_passed_country_to_find_media.yml
+++ b/spec/fixtures/vcr_cassettes/Learning_Resources_end_point/uses_passed_country_to_return_leraning_resources/uses_passed_country_to_find_media.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://www.googleapis.com/youtube/v3/search?channelId=UCluQ5yInbeAkkeCndNnUhpw&key=AIzaSyC1pzzcFLRzEGz8KOa8-zb28v799__y-Zs&maxResults=1&q=Malawi
+    uri: https://www.googleapis.com/youtube/v3/search?channelId=UCluQ5yInbeAkkeCndNnUhpw&key=<google_api_key>&maxResults=1&q=Malawi
     body:
       encoding: US-ASCII
       string: ''
@@ -25,7 +25,7 @@ http_interactions:
       - Referer
       - X-Origin
       Date:
-      - Sun, 13 Nov 2022 14:50:35 GMT
+      - Sun, 13 Nov 2022 16:22:42 GMT
       Server:
       - scaffolding on HTTPServer2
       Cache-Control:
@@ -64,10 +64,10 @@ http_interactions:
             }
           ]
         }
-  recorded_at: Sun, 13 Nov 2022 14:50:35 GMT
+  recorded_at: Sun, 13 Nov 2022 16:22:42 GMT
 - request:
     method: get
-    uri: https://www.googleapis.com/youtube/v3/videos?fields=items(snippet(title))&id=QcJowpMp5qQ&key=AIzaSyC1pzzcFLRzEGz8KOa8-zb28v799__y-Zs&part=snippet
+    uri: https://www.googleapis.com/youtube/v3/videos?fields=items(snippet(title))&id=QcJowpMp5qQ&key=<google_api_key>&part=snippet
     body:
       encoding: US-ASCII
       string: ''
@@ -90,7 +90,7 @@ http_interactions:
       - Referer
       - X-Origin
       Date:
-      - Sun, 13 Nov 2022 14:50:35 GMT
+      - Sun, 13 Nov 2022 16:22:42 GMT
       Server:
       - scaffolding on HTTPServer2
       Cache-Control:
@@ -118,10 +118,10 @@ http_interactions:
             }
           ]
         }
-  recorded_at: Sun, 13 Nov 2022 14:50:35 GMT
+  recorded_at: Sun, 13 Nov 2022 16:22:42 GMT
 - request:
     method: get
-    uri: https://api.unsplash.com/search/photos?client_id=qP-bWLWhLJRo_g9xHfo7toUnP1CkSgXEIaD2EFvvKbY&query=Malawi
+    uri: https://api.unsplash.com/search/photos?client_id=<unsplash_access_key>&query=Malawi
     body:
       encoding: US-ASCII
       string: ''
@@ -160,8 +160,8 @@ http_interactions:
       Warning:
       - The tags property in this endpoint is deprecated. https://changelog.unsplash.com/deprecations/2021/07/12/tags-search-deprecation.html
       Link:
-      - <https://api.unsplash.com/search/photos?client_id=qP-bWLWhLJRo_g9xHfo7toUnP1CkSgXEIaD2EFvvKbY&page=12&query=Malawi>;
-        rel="last", <https://api.unsplash.com/search/photos?client_id=qP-bWLWhLJRo_g9xHfo7toUnP1CkSgXEIaD2EFvvKbY&page=2&query=Malawi>;
+      - <https://api.unsplash.com/search/photos?client_id=<unsplash_access_key>&page=12&query=Malawi>;
+        rel="last", <https://api.unsplash.com/search/photos?client_id=<unsplash_access_key>&page=2&query=Malawi>;
         rel="next"
       X-Total:
       - '115'
@@ -186,17 +186,17 @@ http_interactions:
       Accept-Ranges:
       - bytes
       Date:
-      - Sun, 13 Nov 2022 14:50:35 GMT
+      - Sun, 13 Nov 2022 16:22:42 GMT
       Age:
-      - '71795'
+      - '77322'
       X-Served-By:
-      - cache-iad-kcgs7200144-IAD, cache-den8235-DEN
+      - cache-iad-kcgs7200144-IAD, cache-den8282-DEN
       X-Cache:
       - MISS, HIT
       X-Cache-Hits:
       - 0, 1
       X-Timer:
-      - S1668351036.559859,VS0,VE1
+      - S1668356562.244112,VS0,VE1
       Vary:
       - Accept-Encoding, Origin,Authorization,Accept-Language,client-geo-region,Accept
     body:
@@ -259,5 +259,5 @@ http_interactions:
         more photos please visit: https://www.craigmanners.com/\r\nTo buy me a coffee:
         https://www.buymeacoffee.com/craigmanners or at https://www.craigmanners.com/payments.html  or
         https://www.coinbase.com/join/OMVPEY","location":"Australia. ","links":{"self":"https://api.unsplash.com/users/craigmanners_com","html":"https://unsplash.com/@craigmanners_com","photos":"https://api.unsplash.com/users/craigmanners_com/photos","likes":"https://api.unsplash.com/users/craigmanners_com/likes","portfolio":"https://api.unsplash.com/users/craigmanners_com/portfolio","following":"https://api.unsplash.com/users/craigmanners_com/following","followers":"https://api.unsplash.com/users/craigmanners_com/followers"},"profile_image":{"small":"https://images.unsplash.com/profile-1645956897760-1b193ad7f858image?ixlib=rb-4.0.3\u0026crop=faces\u0026fit=crop\u0026w=32\u0026h=32","medium":"https://images.unsplash.com/profile-1645956897760-1b193ad7f858image?ixlib=rb-4.0.3\u0026crop=faces\u0026fit=crop\u0026w=64\u0026h=64","large":"https://images.unsplash.com/profile-1645956897760-1b193ad7f858image?ixlib=rb-4.0.3\u0026crop=faces\u0026fit=crop\u0026w=128\u0026h=128"},"instagram_username":"CraigManners1","total_collections":10,"total_likes":4,"total_photos":231,"accepted_tos":true,"for_hire":true,"social":{"instagram_username":"CraigManners1","portfolio_url":"https://www.craigmanners.com/","twitter_username":"craigmanners1","paypal_email":null}},"tags":[{"type":"search","title":"malawi"}]}]}'
-  recorded_at: Sun, 13 Nov 2022 14:50:35 GMT
+  recorded_at: Sun, 13 Nov 2022 16:22:42 GMT
 recorded_with: VCR 6.1.0
