--- a/spec/fixtures/vcr_cassettes/VideoService/call_for_video_details/returns_emptry_if_video_not_found.yml
+++ b/spec/fixtures/vcr_cassettes/VideoService/call_for_video_details/returns_emptry_if_video_not_found.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://www.googleapis.com/youtube/v3/videos?fields=items(snippet(title))&id=98uoibjk&key=AIzaSyC1pzzcFLRzEGz8KOa8-zb28v799__y-Zs&part=snippet
+    uri: https://www.googleapis.com/youtube/v3/videos?fields=items(snippet(title))&id=98uoibjk&key=<google_api_key>&part=snippet
     body:
       encoding: US-ASCII
       string: ''
@@ -25,7 +25,7 @@ http_interactions:
       - Referer
       - X-Origin
       Date:
-      - Sat, 12 Nov 2022 17:45:19 GMT
+      - Sun, 13 Nov 2022 16:22:46 GMT
       Server:
       - scaffolding on HTTPServer2
       Cache-Control:
@@ -47,5 +47,5 @@ http_interactions:
         {
           "items": []
         }
-  recorded_at: Sat, 12 Nov 2022 17:45:19 GMT
+  recorded_at: Sun, 13 Nov 2022 16:22:46 GMT
 recorded_with: VCR 6.1.0
